# Sample-Codes-Effective-Modern-Cpp-Book

./: .gitignore  CMakeLists.txt  README.md
Item01_UnderstandTemplateTypeDeduction/: CMakeLists.txt  main.cpp
Item02_UnderstandAutoTypeDeduction/: CMakeLists.txt  main.cpp
Item03_UnderstandDecltype/: CMakeLists.txt  main.cpp
Item04_KnowHowToViewDeducedTypes/: CMakeLists.txt  main.cpp
Item05_PreferAutoToExplicitTypeDeclarations/: CMakeLists.txt  main.cpp
Item06_UseExplicitlyTypeInitializerIdiomWhenAutoDeducesUndesiredTypes/: CMakeLists.txt  main.cpp
Item07_DistinguishBetweenParanthesesAndBraces/: CMakeLists.txt  main.cpp
Item08_PreferNullptrTo0OrNull/: CMakeLists.txt  main.cpp
Item09_PreferAliasDeclarationsToTypedefs/: CMakeLists.txt  main.cpp
Item10_PreferScopedEnumsToUnscopedEnums/: CMakeLists.txt  enumtest.cpp  enumtest.h  main.cpp  status.h
Item11_PreferDeletedFunctionsToPrivateOnes/: CMakeLists.txt  main.cpp
Item12_DeclareOverridingFuctionsOverride/: CMakeLists.txt  main.cpp
Item13_PreferConstIteratorsToIterators/: CMakeLists.txt  main.cpp
Item14_DeclareFunctionsNoexceptIfTheyWontEmitExceptions/: CMakeLists.txt  main.cpp
Item15_UseConstexprWheneverPossible/: CMakeLists.txt  main.cpp
Item16_MakeConstMemberFunctionsThreadSafe/: CMakeLists.txt  main.cpp
Item17_UnderstandSpecialMemberFunctionGeneration/: CMakeLists.txt  main.cpp
Item18_UseUniquePtrForExclusiveOwnership/: CMakeLists.txt  main.cpp
Item19_UseSharedPtrForSharedOwnership/: CMakeLists.txt  main.cpp
Item20_UseWeakPtrForSharedPtrLikePointersThatCanDangle/: CMakeLists.txt  main.cpp
Item21_PreferMakeUniqueMakeSharedtoNew/: CMakeLists.txt  main.cpp
Item22_UsingPimplIdiomDefineSpecialMemberFuncs/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
Item23_UnderstandMoveAndForward/: CMakeLists.txt  main.cpp
Item24_DistinguishUniversalReferences/: CMakeLists.txt  main.cpp
Item25_UseMoveOnRvalueForwardOnUniversal/: CMakeLists.txt  main.cpp
Item26_AvoidOverloadingOnUniversalRefs/: CMakeLists.txt  main.cpp
Item27_AlternativesToOverloadingOnUniversalRefs/: CMakeLists.txt  main.cpp
Item28_UnderstandingReferenceCollapsing/: CMakeLists.txt  main.cpp
Item29_AssumeMoveNotPresentNotCheapNotPresent/: CMakeLists.txt  main.cpp
Item30_PerfectForwardingFailureCases/: CMakeLists.txt  main.cpp
Item31_AvoidDefaultCaptureModes/: CMakeLists.txt  main.cpp
Item32_UseInitCaptureToMoveObjectsIntoClosures/: CMakeLists.txt  main.cpp
Item33_UseDeclTypeOnAutoDRefToForwardThem/: CMakeLists.txt  main.cpp
Item34_PreferLambdas2Bind/: CMakeLists.txt  main.cpp
Item35_PreferTaskBasedProgramming/: CMakeLists.txt  main.cpp
Item36_SpecifyAsyncIfEssential/: CMakeLists.txt  main.cpp
Item37_MakeThreadsUnjoinable/: CMakeLists.txt  main.cpp
Item38_ThreadHandleDestructorBehavior/: CMakeLists.txt  main.cpp
Item39_ConsiderVoidFuturesForOneShotComm/: CMakeLists.txt  main.cpp
Item41_PassByValueWhenCheapToMove/: CMakeLists.txt  main.cpp
Item42_EmplacementInsteadOfInsertion/: CMakeLists.txt  main.cpp
Utils/: CMakeLists.txt
Utils/include/: Chronometer.h  TypeDeduction.h
