cmake_minimum_required(VERSION 3.8...3.21)
project(Trials)
set(CMAKE_CXX_STANDARD 14)



if(NOT CMAKE_CXX_FLAGS MATCHES "std")
    if(CMAKE_BUILD_TYPE MATCHES Debug)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O0 -Wall -Wuninitialized")
    else()
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O3 -Wall -Wuninitialized")
    endif()
endif()

add_subdirectory(Utils)
add_subdirectory(Item01_UnderstandTemplateTypeDeduction)
add_subdirectory(Item02_UnderstandAutoTypeDeduction)
add_subdirectory(Item03_UnderstandDecltype)
add_subdirectory(Item04_KnowHowToViewDeducedTypes)
add_subdirectory(Item05_PreferAutoToExplicitTypeDeclarations)
add_subdirectory(Item06_UseExplicitlyTypeInitializerIdiomWhenAutoDeducesUndesiredTypes)
add_subdirectory(Item07_DistinguishBetweenParanthesesAndBraces)
add_subdirectory(Item08_PreferNullptrTo0OrNull)
add_subdirectory(Item09_PreferAliasDeclarationsToTypedefs)
add_subdirectory(Item10_PreferScopedEnumsToUnscopedEnums)
add_subdirectory(Item11_PreferDeletedFunctionsToPrivateOnes)
add_subdirectory(Item12_DeclareOverridingFuctionsOverride)
add_subdirectory(Item13_PreferConstIteratorsToIterators)
add_subdirectory(Item14_DeclareFunctionsNoexceptIfTheyWontEmitExceptions)
add_subdirectory(Item15_UseConstexprWheneverPossible)
add_subdirectory(Item16_MakeConstMemberFunctionsThreadSafe)
add_subdirectory(Item17_UnderstandSpecialMemberFunctionGeneration)
add_subdirectory(Item18_UseUniquePtrForExclusiveOwnership)
add_subdirectory(Item19_UseSharedPtrForSharedOwnership)
add_subdirectory(Item20_UseWeakPtrForSharedPtrLikePointersThatCanDangle)
add_subdirectory(Item21_PreferMakeUniqueMakeSharedtoNew)
add_subdirectory(Item22_UsingPimplIdiomDefineSpecialMemberFuncs)
add_subdirectory(Item23_UnderstandMoveAndForward)
add_subdirectory(Item24_DistinguishUniversalReferences)
add_subdirectory(Item25_UseMoveOnRvalueForwardOnUniversal)
add_subdirectory(Item26_AvoidOverloadingOnUniversalRefs)
add_subdirectory(Item27_AlternativesToOverloadingOnUniversalRefs)
add_subdirectory(Item28_UnderstandingReferenceCollapsing)
add_subdirectory(Item29_AssumeMoveNotPresentNotCheapNotPresent)
add_subdirectory(Item30_PerfectForwardingFailureCases)
add_subdirectory(Item31_AvoidDefaultCaptureModes)
add_subdirectory(Item32_UseInitCaptureToMoveObjectsIntoClosures)
add_subdirectory(Item33_UseDeclTypeOnAutoDRefToForwardThem)
add_subdirectory(Item34_PreferLambdas2Bind)
add_subdirectory(Item35_PreferTaskBasedProgramming)
add_subdirectory(Item36_SpecifyAsyncIfEssential)
add_subdirectory(Item37_MakeThreadsUnjoinable)
add_subdirectory(Item38_ThreadHandleDestructorBehavior)
add_subdirectory(Item39_ConsiderVoidFuturesForOneShotComm)
add_subdirectory(Item41_PassByValueWhenCheapToMove)
add_subdirectory(Item42_EmplacementInsteadOfInsertion)

